--- a/src/app/components/all-items/all-items.component.html
+++ b/src/app/components/all-items/all-items.component.html
@@ -1,7 +1,7 @@
 <div class="border rounded items-container">
-    <div class="form-check" *ngFor="let item of sharedService.getAllItems()">
+    <div class="form-check" *ngFor="let item of sharedService.getAllItems();let i = index">
         <div class="each-item">
-            <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1" formControlName="selectedItem" value="{'name': item.item}">
+            <input class="form-check-input" type="radio" name="selectedItem" id="flexRadioDefault1" [value]=i (change)="onRadioChanged($event)">
             <label class="form-check-label" for="flexRadioDefault1">
                 {{item.item}} &nbsp; $ {{item.price}}
             </label>
